progress on components

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,7 +23,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Universo", sans-serif; 
+  font-family: "Universo", sans-serif;
   text-transform: uppercase;
 }
 
@@ -93,5 +93,41 @@ a {
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+.lite-youtube-fallback {
+  aspect-ratio: 16 / 9; /* matches YouTube player */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1em;
+  padding: 1em;
+  background-color: #000;
+  color: #fff;
+  text-decoration: none;
+}
+
+/* right-facing triangle "Play" icon */
+.lite-youtube-fallback::before {
+  display: block;
+  content: "";
+  border: solid transparent;
+  border-width: 2em 0 2em 3em;
+  border-left-color: red;
+}
+
+.lite-youtube-fallback:hover::before {
+  border-left-color: #fff;
+}
+
+.lite-youtube-fallback:focus {
+  outline: 2px solid red;
+}
+
+.rich-text-content{
+  p {
+    margin-bottom: 16px;
   }
 }
